# evdotool

./: .gitignore  Cargo.toml  README.md
examples/: joycon.lua  list_devices.lua
src/: bindings.rs  device.rs  evdev_util.rs  friendly_name.rs  global_bindings.rs  interpolator.rs  lua_util.rs  main.rs  time_util.rs  virtual_input.rs
src/lua/: find_device_by_friendly_name.lua  find_device_by_ids.lua  sendkey.lua  sendkeys.lua
