[package]
name = "evdotool"
authors = ["Saul Reynolds-Haertle <saul@saulrh.com>"]
description = "Scriptable key/mouse/joystick mapper for evdev"
repository = "https://github.com/saulrh/evdotool"
license = "MIT"
version = "0.2.0"
edition = "2018"
readme = "README.md"

[dependencies]
rlua = "0.18"
evdev-rs = "0.5"
lazy_static = "1.4"
structopt = "0.3"
prettytable-rs = "^0.8"
confy = "0.4"
serde = { version = "1.0", features = ["derive"] }
nix = "0.23"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
derive_more = "0.99"
rand = "0.8"
once_cell = "1.9"

[patch.crates-io]
evdev-rs = { path = "../evdev-rs" }
